# playbook-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.amazonq/rules/: dev-guide.md
docker/: Dockerfile  docker-compose.yml
docs/: CONTRIBUTING.md  INDEX.md  README.md
docs/guides/: api-reference.md  playbooks.md  quick-start.md
docs/meta/: changelog.md
docs/operations/: deployment.md
docs/overview/: architecture.md
src/: __init__.py  config.py  server.py
