[project]
name = "mcp-playbook-server"
version = "2.1.1"
description = "MCP Playbook Server for curated prompts and templates"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.12.4",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
